--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>БЕКЕШИ</title>
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
+    <!-- Шапка -->
+    <header>
+
+    </header>
+    <!-- Шапка -->
+
     <div class="container">
 
     </div>
