--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 <body>
     <!-- Шапка -->
     <header>
+        <div class="container">
+            <nav>
 
+            </nav>
+
+            <button class="main_button">
+                <div class="content">
+                    УЗНАТЬ ПОДРОБНЕЕ
+                </div>
+            </button>
+        </div>
     </header>
     <!-- Шапка -->
 
