--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
     <!-- Шапка -->
@@ -18,5 +19,21 @@
     <div class="container">
 
     </div>
+
+    <!-- Подвал -->
+     <footer>
+        <div class="container">
+            <div class="gost">
+                <img src="/images/sssr.svg" alt="">
+                <div class="description">РАБОТАЕМ ПО ГОСТ СССР</div>
+            </div>
+            <div class="gost_list">
+                <p>ГОСТ 7416-73 (бекеши овчинные нагольные),</p>
+                <p>ГОСТ 4432-71 (полушубки овчинные нагольные),</p>
+                <p>ГОСТ 5201-69 (тулуп овчинный нагольный) и др.</p>
+            </div>
+        </div>
+     </footer>
+    <!-- Подвал -->
 </body>
 </html>
