--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
      <footer>
         <div class="container">
             <div class="gost">
-                <img src="/images/sssr.svg" alt="">
+                <img src="/images/home/sssr.svg" alt="">
                 <div class="description">РАБОТАЕМ ПО ГОСТ СССР</div>
             </div>
             <div class="gost_list">
