--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>БЕКЕШИ</title>
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/home/header.css">
     <link rel="stylesheet" href="/css/home/footer.css">
     <link rel="stylesheet" href="/css/home/highlights.css">
     <link rel="stylesheet" href="/css/home/tolops.css">
     <link rel="stylesheet" href="/css/home/hero.css">
+    <link rel="stylesheet" href="/css/home/slogan.css">
 </head>
 <body>
 
@@ -136,6 +137,19 @@
                 <img class="putin_all" src="/images/home/main_putin.svg" alt="">
             </div>
             <!-- ТУЛУПЫ -->
+
+            <!-- Слоган -->
+            <div class="slogan">
+                <div class="description">
+                    <h3>СВОЯ ВЕДУЩАЯ ФАБРИКА В РОССИИ ПО 
+                        ВЫДЕЛКЕ МЕХА И ПОШИВУ НАТУРАЛЬНЫХ 
+                        БЕКЕШ,ТУЛУПОВ И ПОЛУШУБКОВ
+                    </h3>
+                    <p>(лучшая выделка: без запаха, как это бывает в «кустарных» производствах)</p>
+                    <img src="/images/home/man.svg" alt="">
+                </div>
+            </div>
+            <!-- Слоган -->
     
         </div>
     
