--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/home/tolops.css">
     <link rel="stylesheet" href="/css/home/hero.css">
     <link rel="stylesheet" href="/css/home/slogan.css">
+    <link rel="stylesheet" href="/css/home/gallery.css">
 </head>
 <body>
 
@@ -151,6 +152,12 @@
             </div>
             <!-- Слоган -->
     
+            <div class="gallery">
+                <img src="/images/home/ceh1.svg" alt="">
+                <img src="/images/home/ceh.svg" alt="">
+                <img src="/images/home/ceh2.svg" alt="">
+            </div>
+
         </div>
     
     </div>
