--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/home/header.css">
     <link rel="stylesheet" href="/css/home/hero.css">
     <link rel="stylesheet" href="/css/home/offer.css">
+    <link rel="stylesheet" href="/css/home/terms.css">
+    <link rel="stylesheet" href="/css/home/delivery.css">
     <link rel="stylesheet" href="/css/home/highlights.css">
     <link rel="stylesheet" href="/css/home/tolops.css">
     <link rel="stylesheet" href="/css/home/slogan.css">
@@ -118,6 +120,24 @@
                 </div>
             </section>
             <!-- Форма заказа -->
+
+            <!-- Условия -->
+            <div class="terms">Ваши данные в безопасности и никогда не будут переданы <span>третьим лицам*</span></div>
+            <!-- Условия -->
+
+            <!-- Доставка -->
+            <div class="delivery">
+                <div class="delivery_company">
+                    <img class="pochta" src="/images/home/pochta.png" alt="">
+                    <img class="sdek" src="/images/home/sdek1.png" alt="">
+                    <div class="delivery_time">
+                        1-5 дней
+                    </div>
+                </div>
+
+                <h3>БЫСТРАЯ ДОСТАВКА В ЛЮБУЮ ТОЧКУ РФ</h3>
+            </div>
+            <!-- Доставка -->
     
             <!-- Характеристики -->
             <div class="highlights">
