--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/home/offer.css">
     <link rel="stylesheet" href="/css/home/terms.css">
     <link rel="stylesheet" href="/css/home/delivery.css">
+    <link rel="stylesheet" href="/css/home/products.css">
     <link rel="stylesheet" href="/css/home/highlights.css">
     <link rel="stylesheet" href="/css/home/tolops.css">
     <link rel="stylesheet" href="/css/home/slogan.css">
@@ -127,6 +128,7 @@
 
             <!-- Доставка -->
             <div class="delivery">
+                <img class="delivery_back" src="/images/home/russia_back.webp" alt="">
                 <div class="delivery_company">
                     <img class="pochta" src="/images/home/pochta.png" alt="">
                     <img class="sdek" src="/images/home/sdek1.png" alt="">
@@ -138,6 +140,31 @@
                 <h3>БЫСТРАЯ ДОСТАВКА В ЛЮБУЮ ТОЧКУ РФ</h3>
             </div>
             <!-- Доставка -->
+
+            <!-- Продукты -->
+            <div class="products">
+                <div class="main_button number">
+                    <div class="content">более 100 единиц товара</div>
+                </div>
+                <div class="product_gallery">
+                    <div class="gallery_item">
+                        <img src="/images/home/prod4.png" alt="">
+                    </div>
+                    <div class="gallery_item">
+                        <img src="/images/home/prod3.png" alt="">
+                    </div>
+                    <div class="gallery_item">
+                        <img src="/images/home/prod2.png" alt="">
+                    </div>
+                    <div class="gallery_item">
+                        <img src="/images/home/prod1.png" alt="">
+                    </div>
+                </div>
+                <div class="main_button stock">
+                    <div class="content">в наличии</div>
+                </div>
+            </div>
+            <!-- Продукты -->
     
             <!-- Характеристики -->
             <div class="highlights">
