--- a/about.html
+++ b/about.html
@@ -9,7 +9,47 @@
 </head>
 <body>
     <header>
-        
+        <img src="/images/about/10year.png" alt="">
+        <div class="description">
+            <p>ЗА 10 ЛЕТ РАБОТЫ НАШЕГО МАГАЗИНА</p>
+            <p class="main">БОЛЕЕ 5000 ЧЕЛОВЕК</p>
+            <p class="bottom">ПРИОБРЕЛИ У НАС БЕКЕШИ, ПОЛУШУБКИ, ТУЛУПЫ!</p>
+        </div>
     </header>
+
+    <div class="main_wrapper">
+        <div class="container">
+            <div class="cities_list">
+                Москва, Санкт-Петербург, Екатеринбург, Казань, Владивосток, Нижневартовск, Тюмень, Уфа, Новосибирск, 
+                Барнаул, Калининград, Калуга, 
+                Ростов-на-Дону, Нижний Новгород, Ижевск, Обнинск, Владикавказ, Саратов, 
+                Пермь, Краснодар, Красноярск, Челябинск, Курган, Тольятти, Воронеж, Рязань, 
+                Петропавловск-Камчатский, 
+                Солнечногорск, Иркутск, Чита, Брянск, Воркута, Нефтеюганск, Миасс, Рыбинск, 
+                Анапа, Севастополь, Сочи, Грозный, 
+                Ставрополь и еще жители более 50 городов и поселков.
+
+                А также свои бекеши получили жители Украины, Беларуси, Казахстана, США, Канады, Германии,
+                Франции, 
+                Нидерландов, Латвии, Литвы и других стран.
+            </div>
+
+            <div class="contry">
+                <div class="description">
+                    <h1>БОЛЕЕ 100 </h1>
+                    <h2>ГОРОДОВ РОССИИ</h2>
+                    <p>10 СТРАН МИРА</p>
+                </div>
+                <div class="image">
+                    <img class="main" src="/images//about/russia.svg" alt="">
+                </div>
+            </div>
+
+            <div class="banners">
+                <div class="banner_item">ЗАКАЗЫВАЙТЕ И ВЫ!</div>
+                <div class="banner_item">ХОДИТЕ В НАТУРАЛЬНОМ</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
