--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@
     <title>БЕКЕШИ</title>
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/home/header.css">
-    <link rel="stylesheet" href="/css/home/hero.css">
-    <link rel="stylesheet" href="/css/home/offer.css">
-    <link rel="stylesheet" href="/css/home/terms.css">
-    <link rel="stylesheet" href="/css/home/delivery.css">
-    <link rel="stylesheet" href="/css/home/products.css">
-    <link rel="stylesheet" href="/css/home/highlights.css">
-    <link rel="stylesheet" href="/css/home/tolops.css">
-    <link rel="stylesheet" href="/css/home/slogan.css">
-    <link rel="stylesheet" href="/css/home/gallery.css">
-    <link rel="stylesheet" href="/css/home/footer.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/home/home.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
 
@@ -177,21 +169,21 @@
                 <div class="highlights_list">
                     <div class="highlights_item">
                         <div class="wrapper">
-                            <img src="/images/leather.png" alt="">
+                            <img src="/images/home/leather2.png" alt="">
                             <h3>100%</h3>
                             <p>Натуральная овечья кожа</p>
                         </div>
                     </div>
                     <div class="highlights_item">
                         <div class="wrapper">
-                            <img src="/images/leather.png" alt="">
+                            <img src="/images/home/barash.png" alt="">
                             <h3>100%</h3>
                             <p>Натуральный овечий мех</p>
                         </div>
                     </div>
                     <div class="highlights_item">
                         <div class="wrapper">
-                            <img src="/images/leather.png" alt="">
+                            <img src="/images/home/snow.png" alt="">
                             <h3>-50°</h3>
                             <p>выдерживает морозы</p>
                         </div>
