--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta 
+        name="viewport" 
+        content="height=device-height, 
+                  width=device-width, initial-scale=1, minimum-scale=1,
+                  maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi"
+    >
     <title>БЕКЕШИ</title>
-    <link rel="stylesheet" href="/css/fonts.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/home/home.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/home/home.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
 
@@ -31,7 +36,7 @@
             </button>
 
             <button class="icon_btn phone">
-                <img src="/icons/phone-circle.svg" alt="">
+                <img src="./icons/phone-circle.svg" alt="">
             </button>
 
             <button class="burger_btn">
@@ -90,7 +95,7 @@
             <section class="offer">
                 <div class="card">
                     <div class="decor"></div>
-                    <img src="/images/home/photo1.jpg" alt="">
+                    <img src="./images/home/photo1.jpg" alt="">
                     <div class="description right">
                         <div class="price">
                             <p>от 9 900 ₽</p>
@@ -100,10 +105,10 @@
                 </div>
 
                 <form action="">
-                    <img class="back" src="/images/home/leather.png" alt="">
+                    <img class="back" src="./images/home/leather.png" alt="">
                     
                     <div class="offer_content">
-                        <img class="logo" src="/images/home/logo.png" alt="">
+                        <img class="logo" src="./images/home/logo.png" alt="">
                         <h2>ЗАКАЖИТЕ ТУЛУП СЕГОДНЯ И ПОЛУЧАЙТЕ СКИДКУ И 2 ПОДАРКА!</h2>
                         <input type="text">
                         <input type="text">
@@ -117,7 +122,7 @@
 
                 <div class="card">
                     <div class="decor"></div>
-                    <img src="/images/home/photo2.jpg" alt="">
+                    <img src="./images/home/photo2.jpg" alt="">
                     <div class="description left">
                         <div class="price">
                             <p>от 9 900 ₽</p>
@@ -134,10 +139,10 @@
 
             <!-- Доставка -->
             <section class="delivery">
-                <img class="delivery_back" src="/images/home/russia_back.webp" alt="">
+                <img class="delivery_back" src="./images/home/russia_back.webp" alt="">
                 <div class="delivery_company">
-                    <img class="pochta" src="/images/home/pochta.png" alt="">
-                    <img class="sdek" src="/images/home/sdek1.png" alt="">
+                    <img class="pochta" src="./images/home/pochta.png" alt="">
+                    <img class="sdek" src="./images/home/sdek1.png" alt="">
                     <div class="delivery_time">
                         1-5 дней
                     </div>
@@ -154,16 +159,16 @@
                 </div>
                 <div class="product_gallery">
                     <div class="gallery_item">
-                        <img src="/images/home/prod4.png" alt="">
+                        <img src="./images/home/prod4.png" alt="">
                     </div>
                     <div class="gallery_item">
-                        <img src="/images/home/prod3.png" alt="">
+                        <img src="./images/home/prod3.png" alt="">
                     </div>
                     <div class="gallery_item">
-                        <img src="/images/home/prod2.png" alt="">
+                        <img src="./images/home/prod2.png" alt="">
                     </div>
                     <div class="gallery_item">
-                        <img src="/images/home/prod1.png" alt="">
+                        <img src="./images/home/prod1.png" alt="">
                     </div>
                 </div>
                 <div class="main_button stock">
@@ -183,21 +188,21 @@
                 <div class="highlights_list">
                     <div class="highlights_item">
                         <div class="wrapper">
-                            <img src="/images/home/leather2.png" alt="">
+                            <img src="./images/home/leather2.png" alt="">
                             <h3>100%</h3>
                             <p>Натуральная овечья кожа</p>
                         </div>
                     </div>
                     <div class="highlights_item">
                         <div class="wrapper">
-                            <img src="/images/home/barash.png" alt="">
+                            <img src="./images/home/barash.png" alt="">
                             <h3>100%</h3>
                             <p>Натуральный овечий мех</p>
                         </div>
                     </div>
                     <div class="highlights_item">
                         <div class="wrapper">
-                            <img src="/images/home/snow.png" alt="">
+                            <img src="./images/home/snow.png" alt="">
                             <h3>-50°</h3>
                             <p>выдерживает морозы</p>
                         </div>
@@ -213,11 +218,11 @@
                     <div class="description">
                         <p>
                             ЛЕГЕНДАРНЫЕ АРМЕЙСКИЕ БЕКЕШИ СССР 80-90-2000 гг.
-                            <img src="/images/home/nikulin.svg" alt="">
+                            <img src="./images/home/nikulin.svg" alt="">
                         </p>
                     </div>
                 </div>
-                <img class="putin_all" src="/images/home/main_putin.svg" alt="">
+                <img class="putin_all" src="./images/home/main_putin.svg" alt="">
             </section>
             <!-- ТУЛУПЫ -->
 
@@ -229,15 +234,15 @@
                         БЕКЕШ,ТУЛУПОВ И ПОЛУШУБКОВ
                     </h3>
                     <p>(лучшая выделка: без запаха, как это бывает в «кустарных» производствах)</p>
-                    <img src="/images/home/man.svg" alt="">
+                    <img src="./images/home/man.svg" alt="">
                 </div>
             </section>
             <!-- Слоган -->
     
             <section class="gallery">
-                <img src="/images/home/ceh1.svg" alt="">
-                <img src="/images/home/ceh.svg" alt="">
-                <img src="/images/home/ceh2.svg" alt="">
+                <img src="./images/home/ceh1.svg" alt="">
+                <img src="./images/home/ceh.svg" alt="">
+                <img src="./images/home/ceh2.svg" alt="">
             </section>
 
         </div>
@@ -247,7 +252,7 @@
      <footer>
         <div class="container">
             <div class="gost">
-                <img src="/images/home/sssr.svg" alt="">
+                <img src="./images/home/sssr.svg" alt="">
                 <div class="description">РАБОТАЕМ ПО ГОСТ СССР</div>
             </div>
             <div class="gost_list">
