--- a/about.html
+++ b/about.html
@@ -2,15 +2,20 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta 
+        name="viewport" 
+        content="height=device-height, 
+                  width=device-width, initial-scale=1, minimum-scale=1,
+                  maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi"
+    >
     <title>БЕКЕШИ</title>
-    <link rel="stylesheet" href="/css/fonts.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/about/about.css">
+    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/about/about.css">
 </head>
 <body>
     <header>
-        <img src="/images/about/10year.png" alt="">
+        <img src="./images/about/10year.png" alt="">
         <div class="description">
             <p>ЗА 10 ЛЕТ РАБОТЫ НАШЕГО МАГАЗИНА</p>
             <p class="main">БОЛЕЕ 5000 ЧЕЛОВЕК</p>
@@ -42,7 +47,7 @@
                     <p>10 СТРАН МИРА</p>
                 </div>
                 <div class="image">
-                    <img class="main" src="/images//about/russia.svg" alt="">
+                    <img class="main" src="./images//about/russia.svg" alt="">
                 </div>
             </div>
 
